# patreon-rs

./: .gitignore  Cargo.toml  README.md
examples/: api_current_user.rs  api_utils.rs  creator_campaigns.rs  creator_delete_webhook_cli.rs  creator_members.rs  creator_posts.rs  creator_webhooks.rs  oauth_authorization_url.rs  oauth_code_to_tokens.rs  oauth_exchange_code.rs  oauth_localhost_login.rs  oauth_refresh_token.rs  oauth_refresh_tokens.rs  oauth_url_gen.rs  oauth_utils.rs  user_identity.rs  user_is_patron_of_campaign.rs  user_memberships_list.rs  user_memberships_with_campaigns.rs  webhook_validate.rs
src/: api.rs  compile_rules.rs  creator_client.rs  error.rs  lib.rs  oauth.rs  oauth2.rs  user_client.rs  webhook.rs
src/models/: attributes.rs  mod.rs  resources.rs  response.rs  serde_helpers.rs
