[package]
name = "patreon"
version = "0.1.5"
edition = "2021"
description = "Patreon client"
license = "MIT"
repository = "https://github.com/niuhuan/patreon-rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hmac = "0.12"
md-5 = "0.10"
reqwest = { version = "0.11", default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10"
tracing = "0.1"
url = "2"

[features]
default = ["native-tls"]
native-tls = ["reqwest/default-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored", "native-tls"]
rustls = ["reqwest/rustls-tls-native-roots", "reqwest/rustls", "reqwest/rustls-tls", "reqwest/__rustls", "reqwest/hyper-rustls"]

[dev-dependencies]
tokio = { version = "1.27", features = ["full"] }
