[package]
name = "patreon"
version = "0.2.1"
edition = "2024"
description = "Patreon client"
license = "MIT"
repository = "https://github.com/niuhuan/patreon-rs"

[features]
# Default to the system TLS stack (native-tls).
default = ["native-tls"]

# Use reqwest's default TLS backend (native-tls).
native-tls = ["reqwest/native-tls"]

# Use rustls (reqwest's TLS backend).
rustls = ["reqwest/rustls"]


[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.13.1", default-features = false, features = ["form", "json", "http2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
urlencoding = "2.1.3"
